--- a/madsat.html
+++ b/madsat.html
@@ -527,19 +527,36 @@
     
 </div> <!-- end of tabs -->
 
-<!-- continuous real time status messaging (ouput) -->
-<section id="query-results" style="overflow:auto;">
+<!-- continuous real time status messaging (output) -->
+
+	<section id="query-results" style="overflow:auto;">
      
-	<h1>Query Results</h1>
+	<div>
+	<h1 style="width:50%; display:inline;">Query Results</h1>
+	<div id="np-results">
+	
+	
+	<button>Prev</button>
+	<button>Next</button>
+	</div>
+	</div>
+	<div>
 	<p>Select query from Library tab or Analytics tab to display results.</p>
+	</div>
+
+	
+	</section>
 	
 	
-</section>
+	
+
+
 
 <section id="graphicsDisplay">
 	<h1>Geospatial Area of Interest</h1>
     <p>This panel will display, if relevant, a graphic of interest. Panel may be split into two as development progresses, a top and bottom to allow output of Bayesian Model and other relevant graphic such as an interactive map.</p>
 </section>
+
 </div> <!--end of main-->
 </div> <!--end of wrapper-->
 </body>
