minor tweaks to css and UI

--- a/madsat.html
+++ b/madsat.html
@@ -102,7 +102,7 @@
 	    
         <label for="nlq-database-list">Select Data Source:</label><br>
 	<select id="nlq-database-list" style="width:150px; height:25px;">
-	
+	<option value="null">Select...</option>
 	</select>  
 	  <br><br>
 	    <label for="nlq-string">Enter query: </label><br>
@@ -203,7 +203,7 @@
     	<p class="description">Library of predefined queries. Select database and desired query by typing in 	text boxes.</p>
 	<label for="database-list">Select Domain:</label><br>
 	<select id="database-list" style="width:150px; height:25px;">
-	
+	<option value="null">Select...</option>
 	</select>  
 	  <br><br>
 	<label for="query-list">Select Query:</label><br>
