--- a/b.html
+++ b/b.html
@@ -192,7 +192,7 @@
 																.ajax(
 																		{
 																			type : 'POST',
-																			url : 'aAnalytics.jsp',
+																			url : 'bAnalytics.jsp',
 																			data : {
 																				q : modelString
 																			},
@@ -342,7 +342,7 @@
 																.ajax(
 																		{
 																			type : 'POST',
-																			url : 'aAnalytics.jsp',
+																			url : 'bAnalytics.jsp',
 																			data : {
 																				q : modelString
 																			},
